# arpeggio

./: README.md  main.py  piano_lists.py  pyproject.toml
assets/MIDI/: F1_(From_F1®_The_Movie)_–_Hans_Zimmer.mid  Made_of_Air_-_Thomas_Bergersen.mid  RUSH_A_-_Andrew_Wrangell.mid  Rush_F_–_Andrew_Wrangell.mid  Sway_–_Michael_Bublé.mid  Thomas_Bergersen_-_Made_of_Air_(2_Pianos).mid  Thomas_Bergersen_-_Mountain_Call_(2_Pianos).mid
