[project]
name = "arpeggio"
version = "0.1.0"
description = "A professional fork of the Python Piano project with enhanced audio engine capabilities for handling complex MIDI data without digital clipping or distortion."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mido>=1.3.3",
    "pygame>=2.6.1",
]
